# code-gen-agent

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
backend/code_gen_agent/: __init__.py  agent.py  bootstrap.py  config.py  sandbox.py  server.py
backend/code_gen_agent/api/: __init__.py  deps.py  health.py  history.py  middleware.py  runs.py  schema.py  schemas.py  streaming.py
backend/code_gen_agent/checkers/: __init__.py  _subprocess.py  base.py  compile.py  lint.py  llm_review.py  security.py  test.py
backend/code_gen_agent/graph/: __init__.py  base.py  builder.py  constants.py  registry.py  routing.py  state.py
backend/code_gen_agent/llm/: __init__.py  callbacks.py  factory.py  providers.py  usage.py
backend/code_gen_agent/observability/: __init__.py  instrumentation.py  log_reader.py  logger.py  metrics.py  tracing.py  usage.py
backend/code_gen_agent/persistence/: __init__.py  base.py  db.py  factory.py  redis.py  request_store.py  sqlite.py
backend/code_gen_agent/prompts/: __init__.py  clarify.yaml  codegen.yaml  decompose.yaml  intent.yaml  llm_review.yaml  loader.py  repair.yaml  verify.yaml
backend/code_gen_agent/runtime/: __init__.py  runner.py
backend/configs/: default.yaml
backend/data/: .gitkeep
backend/data/requests/: .gitkeep
backend/examples/: quickstart.py
backend/logs/: .gitkeep
backend/tests/: test_checkers.py  test_graph_builder.py  test_graph_flow.py  test_llm_factory.py  test_persistence.py
frontend/: .dockerignore  (+8 more)
(+34 files in other folders)
